--- a/new.broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -102,30 +102,73 @@
                                 <a href="http://fx-trend.com/pamm/11695?agent=588607" target="_blank" class="trader">Otmar</a>
                                 <span id="small-fxtrend-7"></span>
                             </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                         <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
                             <div id="medium-fxtrend" class="summ"></div>
                             <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/7031?agent=588607" target="_blank" class="trader">Sven</a>
+                                <a href="http://fx-trend.com/pamm/518906?agent=588607" target="_blank" class="trader">Jborn</a>
                                 <span id="medium-fxtrend-1"></span>
                             </div>
                             <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/520050?agent=588607" target="_blank" class="trader">votfx</a>
+                                <a href="http://fx-trend.com/pamm/523719?agent=588607" target="_blank" class="trader">Leventa</a>
                                 <span id="medium-fxtrend-2"></span>
                             </div>
+                            <div class="trader-summ">
+                                <a href="http://fx-trend.com/pamm/534457?agent=588607" target="_blank" class="trader">Hozyin</a>
+                                <span id="medium-fxtrend-3"></span>
+                            </div>
+                            <div class="trader-summ">
+                                <a href="http://fx-trend.com/pamm/520050?agent=588607" target="_blank" class="trader">votfx</a>
+                                <span id="medium-fxtrend-4"></span>
+                            </div>
+                            <div class="trader-summ">
+                                <a href="http://fx-trend.com/pamm/10253?agent=588607" target="_blank" class="trader">investobolin</a>
+                                <span id="medium-fxtrend-5"></span>
+                            </div>
+                            <div class="trader-summ">
+                                <a href="http://fx-trend.com/pamm/7031?agent=588607" target="_blank" class="trader">Sven</a>
+                                <span id="medium-fxtrend-6"></span>
+                            </div>
+                            <div class="trader-summ">
+                                <a href="http://fx-trend.com/pamm/11695?agent=588607" target="_blank" class="trader">Otmar</a>
+                                <span id="medium-fxtrend-7"></span>
+                            </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                         <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
                             <div id="large-fxtrend" class="summ"></div>
                             <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/7031?agent=588607" target="_blank" class="trader">Sven</a>
+                                <a href="http://fx-trend.com/pamm/518906?agent=588607" target="_blank" class="trader">Jborn</a>
                                 <span id="large-fxtrend-1"></span>
                             </div>
                             <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/520050?agent=588607" target="_blank" class="trader">votfx</a>
+                                <a href="http://fx-trend.com/pamm/523719?agent=588607" target="_blank" class="trader">Leventa</a>
                                 <span id="large-fxtrend-2"></span>
                             </div>
+                            <div class="trader-summ">
+                                <a href="http://fx-trend.com/pamm/534457?agent=588607" target="_blank" class="trader">Hozyin</a>
+                                <span id="large-fxtrend-3"></span>
+                            </div>
+                            <div class="trader-summ">
+                                <a href="http://fx-trend.com/pamm/520050?agent=588607" target="_blank" class="trader">votfx</a>
+                                <span id="large-fxtrend-4"></span>
+                            </div>
+                            <div class="trader-summ">
+                                <a href="http://fx-trend.com/pamm/10253?agent=588607" target="_blank" class="trader">investobolin</a>
+                                <span id="large-fxtrend-5"></span>
+                            </div>
+                            <div class="trader-summ">
+                                <a href="http://fx-trend.com/pamm/7031?agent=588607" target="_blank" class="trader">Sven</a>
+                                <span id="large-fxtrend-6"></span>
+                            </div>
+                            <div class="trader-summ">
+                                <a href="http://fx-trend.com/pamm/11695?agent=588607" target="_blank" class="trader">Otmar</a>
+                                <span id="large-fxtrend-7"></span>
+                            </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                     </tr>
                     <tr>
@@ -140,6 +183,7 @@
                                 <a href="https://ru.forex-mmcis.com/index_top_promo.html?ref=118253" target="_blank" class="trader">Index top 20</a>
                                 <span id="small-mmcis-1"></span>
                             </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                         <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
@@ -148,6 +192,7 @@
                                 <a href="https://ru.forex-mmcis.com/index_top_promo.html?ref=118253" target="_blank" class="trader">Index top 20</a>
                                 <span id="medium-mmcis-1"></span>
                             </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                         <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
@@ -156,6 +201,7 @@
                                 <a href="https://ru.forex-mmcis.com/index_top_promo.html?ref=118253" target="_blank" class="trader">Index top 20</a>
                                 <span id="large-mmcis-1"></span>
                             </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                     </tr>
                     <tr>
@@ -170,6 +216,7 @@
                                 <a href="http://panteon-finance.com/fundsTo/to2_119.html" target="_blank" class="trader">Stable 30</a>
                                 <span id="small-panteon-1"></span>
                             </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                         <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
@@ -178,6 +225,7 @@
                                 <a href="http://panteon-finance.com/fundsTo/to2_119.html" target="_blank" class="trader">Stable 30</a>
                                 <span id="medium-panteon-1"></span>
                             </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                         <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
@@ -186,6 +234,7 @@
                                 <a href="http://panteon-finance.com/fundsTo/to2_119.html" target="_blank" class="trader">Stable 30</a>
                                 <span id="large-panteon-1"></span>
                             </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                     </tr>
                     <tr>
@@ -200,6 +249,7 @@
                                 <a href="https://my.forexinn.ru/trader/19214/a/broccoli" target="_blank" class="trader">Накопительный</a>
                                 <span id="small-forexinn-1"></span>
                             </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                         <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
@@ -208,6 +258,7 @@
                                 <a href="http://www.forexinn.ru/register/a/broccoli" target="_blank" class="trader">Накопительный</a>
                                 <span id="medium-forexinn-1"></span>
                             </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                         <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
@@ -216,6 +267,7 @@
                                 <a href="http://www.forexinn.ru/register/a/broccoli" target="_blank" class="trader">Накопительный</a>
                                 <span id="large-forexinn-1"></span>
                             </div>
+                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
                     </tr>
                 </tbody>
@@ -231,7 +283,7 @@
         $('#small').spinner({
             step: 10,
             min: 10,
-            max: 1500,
+            max: 1499,
             start: 1000
         }).on('change', function () {
             var val = this.value,
@@ -245,7 +297,7 @@
         $('#medium').spinner({
             step: 100,
             min: 1500,
-            max: 3000,
+            max: 2999,
             start: 2000
         }).on('change', function () {
             var val = this.value,
@@ -526,20 +578,159 @@
     }
 
     function CalcMedium() {
+        var jborn = 0;
+        var leventa = 0;
+        var hozyin = 0;
+        var votfx = 0;
+        var indextop20 = 0;
+        var stable30 = 0;
+        var investobolin = 0;
+        var sven = 0;
+        var otmar = 0;
+        var nakopitelny = 0;
+
         var value = $('#medium').spinner('value');
 
-        $('#medium-forexinn').html(Math.round(value * 0.25) + '$');
-        $('#medium-forexinn-1').html(Math.round(value * 0.25) + '$ <span class="percent">(25%)</span>');
+        if (value >= 1500 && value < 1999) {
+            stable30 = 13.30;
+            votfx = 13.30;
+            hozyin = 13.30;
+            investobolin = 13.30;
+            indextop20 = 13.30;
+            jborn = 13.30;
+            sven = 13.30;
+            nakopitelny = 13.30;
+        }
 
-        $('#medium-fxtrend').html(Math.round(value * 0.25) + '$');
-        $('#medium-fxtrend-1').html(Math.round(value * 0.125) + '$ <span class="percent">(12.5%)</span>');
-        $('#medium-fxtrend-2').html(Math.round(value * 0.125) + '$ <span class="percent">(12.5%)</span>');
+        if (value >= 2000 && value < 2499) {
+            otmar = 25;
+            sven = 10;
+            indextop20 = 25;
+            votfx = 12.5;
+            jborn = 12.5;
+            hozyin = 15;
+        }
 
-        $('#medium-mmcis').html(Math.round(value * 0.25) + '$');
-        $('#medium-mmcis-1').html(Math.round(value * 0.25) + '$ <span class="percent">(25%)</span>');
+        if (value >= 2500 && value < 2999) {
+            otmar = 20;
+            indextop20 = 20;
+            votfx = 15;
+            hozyin = 15;
+            stable30 = 15;
+            jborn = 15;
+        }
 
-        $('#medium-panteon').html(Math.round(value * 0.25) + '$');
-        $('#medium-panteon-1').html(Math.round(value * 0.25) + '$ <span class="percent">(25%)</span>');
+        // fxtrend
+        if (jborn + leventa + hozyin + votfx + investobolin + sven + otmar > 0) {
+            $('#medium-fxtrend').html(Math.round(value * (jborn + leventa + hozyin + votfx + investobolin + sven + otmar) * 0.01) + '$');
+        }
+        else {
+            $('#medium-fxtrend').html('—');
+        }
+
+        if (jborn != 0) {
+            $('#medium-fxtrend-1').html(Math.round(value * jborn * 0.01) + '$ <span class="percent">(' + jborn.toFixed(2) + '%)</span>');
+            $('#medium-fxtrend-1').parent().show();
+        }
+        else {
+            $('#medium-fxtrend-1').parent().hide();
+        }
+
+        if (leventa != 0) {
+            $('#medium-fxtrend-2').html(Math.round(value * leventa * 0.01) + '$ <span class="percent">(' + leventa.toFixed(2) + '%)</span>');
+            $('#medium-fxtrend-2').parent().show();
+        }
+        else {
+            $('#medium-fxtrend-2').parent().hide();
+        }
+
+        if (hozyin != 0) {
+            $('#medium-fxtrend-3').html(Math.round(value * hozyin * 0.01) + '$ <span class="percent">(' + hozyin.toFixed(2) + '%)</span>');
+            $('#medium-fxtrend-3').parent().show();
+        }
+        else {
+            $('#medium-fxtrend-3').parent().hide();
+        }
+
+        if (votfx != 0) {
+            $('#medium-fxtrend-4').html(Math.round(value * votfx * 0.01) + '$ <span class="percent">(' + votfx.toFixed(2) + '%)</span>');
+            $('#medium-fxtrend-4').parent().show();
+        }
+        else {
+            $('#medium-fxtrend-4').parent().hide();
+        }
+
+        if (investobolin != 0) {
+            $('#medium-fxtrend-5').html(Math.round(value * investobolin * 0.01) + '$ <span class="percent">(' + investobolin.toFixed(2) + '%)</span>');
+            $('#medium-fxtrend-5').parent().show();
+        }
+        else {
+            $('#medium-fxtrend-5').parent().hide();
+        }
+
+        if (sven != 0) {
+            $('#medium-fxtrend-6').html(Math.round(value * sven * 0.01) + '$ <span class="percent">(' + sven.toFixed(2) + '%)</span>');
+            $('#medium-fxtrend-6').parent().show();
+        }
+        else {
+            $('#medium-fxtrend-6').parent().hide();
+        }
+
+        if (otmar != 0) {
+            $('#medium-fxtrend-7').html(Math.round(value * otmar * 0.01) + '$ <span class="percent">(' + otmar.toFixed(2) + '%)</span>');
+            $('#medium-fxtrend-7').parent().show();
+        }
+        else {
+            $('#medium-fxtrend-7').parent().hide();
+        }
+
+        // mmcis 
+        if (indextop20 > 0) {
+            $('#medium-mmcis').html(Math.round(value * indextop20 * 0.01) + '$');
+        }
+        else {
+            $('#medium-mmcis').html('—');
+        }
+
+        if (indextop20 != 0) {
+            $('#medium-mmcis-1').html(Math.round(value * indextop20 * 0.01) + '$ <span class="percent">(' + indextop20.toFixed(2) + '%)</span>');
+            $('#medium-mmcis-1').parent().show();
+        }
+        else {
+            $('#medium-mmcis-1').parent().hide();
+        }
+
+        // panteon
+        if (stable30 > 0) {
+            $('#medium-panteon').html(Math.round(value * stable30 * 0.01) + '$');
+        }
+        else {
+            $('#medium-panteon').html('—');
+        }
+
+        if (stable30 != 0) {
+            $('#medium-panteon-1').html(Math.round(value * stable30 * 0.01) + '$ <span class="percent">(' + stable30.toFixed(2) + '%)</span>');
+            $('#medium-panteon-1').parent().show();
+        }
+        else {
+            $('#medium-panteon-1').parent().hide();
+        }
+
+        // forexinn
+        if (nakopitelny > 0) {
+            $('#medium-forexinn').html(Math.round(value * nakopitelny * 0.01) + '$');
+        }
+        else {
+            $('#medium-forexinn').html('—');
+        }
+
+        if (nakopitelny != 0) {
+            $('#medium-forexinn-1').html(Math.round(value * nakopitelny * 0.01) + '$ <span class="percent">(' + nakopitelny.toFixed(2) + '%)</span>');
+            $('#medium-forexinn-1').parent().show();
+        }
+        else {
+            $('#medium-forexinn-1').parent().hide();
+        }
     }
 
     function CalcLarge() {
