--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -285,7 +285,7 @@
             }
         </div>
         <div class="panel about-forex social-comments">
-            <h4>Напишите, что вы думете:</h4>
+            <h4>Напишите, что вы думаете:</h4>
             <div class="social-container">
                 <!-- Put this script tag to the <head> of your page -->
                 <script type="text/javascript" src="//vk.com/js/api/openapi.js?105"></script>
