--- a/new.broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -41,6 +41,7 @@
         </div>
 
         <div class="pamm-offer">
+            <h3>Лучшие <a target="_blank" href="http://ru.wikipedia.org/wiki/%D0%9F%D0%90%D0%9C%D0%9C-%D1%81%D1%87%D1%91%D1%82">ПАММ-счета</a></h3>
             <table class="pamm-offer-table">
                 <thead>
                     <tr>
