--- a/new.broccoli/BroccoliMvc/Content/Site.css
+++ b/new.broccoli/BroccoliMvc/Content/Site.css
@@ -2885,8 +2885,28 @@ footer#main{
 }
 
 .pamm-offer {
-    margin-top: 70px;
+    margin-top: 40px;
     margin-bottom: 50px;
+}
+
+.pamm-offer h3 {
+    margin-bottom: 20px;
+    text-align: center;
+    margin-left: 195px;
+}
+
+.pamm-offer h3 a {
+    border-bottom: 1px dashed #000;
+    text-decoration: none;
+    font-size: inherit;
+    font-family: Segoe UI Light;
+    cursor: help;
+    line-height: 1;
+    display: inline-block;
+}
+
+.pamm-offer h3 a:hover {
+    border-bottom: 1px dashed #fff;
 }
 
 .pamm-offer-table {
