--- a/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
@@ -30,6 +30,8 @@
                 <div class="logo-container">
                     <img src="@Url.Content("~/Content/img/temp_logo.png")"/>
                     <a href="@Url.Action("Index", "Home")" class="logo-text">Broccoli<br />Trade</a>
+                    <span>Советники</span>
+                    <a class="switch-site" href="http://broccoli-trade.ru">Перейти к "ПАММ-счетам"</a>
                 </div>
             </div>
             <div class="white-line">
