--- a/new.broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
@@ -30,6 +30,8 @@
                 <div class="logo-container">
                     <img src="@Url.Content("~/Content/img/temp_logo.png")"/>
                     <a href="@Url.Action("Index", "Home")" class="logo-text">Broccoli<br />Trade</a>
+                    <span>ПАММ</span>
+                    <a class="switch-site" href="http://robots.broccoli-trade.ru">Перейти к "Советникам"</a>
                 </div>
             </div>
             <div class="white-line">
