--- a/new.broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -29,7 +29,7 @@
             <div class="left">
                 <h3>Существует несколько типов риска.</h3>
                 <p>1. <strong>Риск просадки</strong> - когда один трейдер или инвестиционный инструмент получает отрицательную доходность, доход других инструментов перекрывает его и в в целом за расчётный период Вы получаете положительную доходность.</p>
-                <p>2. Риск того что <strong>компания обонкротится</strong> и не вернёт деньги на счетах. Мы рекомендуем инвестировать в одну компанию не более 25% от всех Ваших денег, таким образом Вы за 2-4 месяца полностью покроете этот риск за счёт диверсификации, если такой случай наступит.</p>
+                <p>2. Риск того, что <strong>компания обонкротится</strong> и не вернёт деньги на счетах. Мы проанализировали компании и рекомендуем инвестировать в соответствие со степенью такого риска.</p>
                 <p>3. <strong>Валютный риск</strong> курс доллара постоянно меняется и как показали последние несколько лет в долгосрочной перспективе он растёт. Команда Broccoli-trade рекомендует инвестировать средства минимум на 3 месяца.</p>
             </div>
             <div>
@@ -273,6 +273,10 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="instruction-container" id="instr">
+                <h3>Инструкция пользования таблицей:</h3><br />
+                <iframe width="723" height="406" src="http://www.youtube.com/embed/1fcJbQrGcko?feature=player_detailpage&amp;vq=large" frameborder="0" allowfullscreen="1"></iframe>
+            </div>
         </div>
 
         <h4>Если Вы планируете проинвестировать от 20 000$, пожалуйста, свяжитесь с нами через службу поддержки или форму обратной связи и мы предоставим Вам особые условия инвестирования.</h4>
