--- a/new.broccoli/BroccoliMvc/Content/Site.css
+++ b/new.broccoli/BroccoliMvc/Content/Site.css
@@ -1761,7 +1761,7 @@ footer#main{
 }
 
 .center-content .about-forex iframe {
-    margin: 30px;
+    margin: 30px 5px;
 }
 
 .center-content .about-forex .about-forex-text {
