--- a/new.broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -275,7 +275,7 @@
             </table>
             <div class="instruction-container" id="instr">
                 <h3>Инструкция пользования таблицей:</h3><br />
-                <iframe width="723" height="406" src="http://www.youtube.com/embed/09FLd5WRmdU?feature=player_detailpage&amp;vq=large" frameborder="0" allowfullscreen="1"></iframe>
+                <iframe width="723" height="406" src="http://www.youtube.com/embed/09FLd5WRmdU?feature=player_detailpage&vq=hd720&rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
 
